Collapsed list into editor.  Initial work on fixing resize handler

--- a/main.css
+++ b/main.css
@@ -17,11 +17,11 @@ body {
   background-color: #2B2B2B;
 }
 
-#list {
+#editor {
   background-color: #3B3B3B;
 }
 
-#list > div {
+#editor > div:nth-last-child(n+3) {
   position: absolute;
   display: flex;
   /* higher lines occlude lower lines */
@@ -33,7 +33,7 @@ body {
   vertical-align: top;
 }
 
-#menu, #list > div {
+#menu, #editor > div:nth-last-child(n+3) {
   height: 40px;
   width: 100%;
   transform: translateY(calc(var(--position, -1) * 40px));
@@ -69,7 +69,7 @@ button {
   position: relative;
   z-index: -1;
   height: 40px;
-  width: calc(12px * var(--indentation, 0));
+  width: calc(12px * var(--indent, 0));
   background: repeating-linear-gradient(to right, transparent, transparent 8px,
                                     DarkSlateGray 8px, DarkSlateGray 12px);
   flex-shrink: 0;
@@ -78,20 +78,20 @@ button {
 
 #menu > .indentation {
   width: 0;
-  padding-right: calc(12px * var(--indentation, 0));
-  margin-right: calc(-12px * var(--indentation, 0));
+  padding-right: calc(12px * var(--indent, 0));
+  margin-right: calc(-12px * var(--indent, 0));
   opacity: 0.5;
 }
 
-.starting-scope > .indentation {
-  width: calc(12px * var(--indentation, 0) + 12px);
+.half-indent > .indentation {
+  width: calc(12px * var(--indent, 0) + 12px);
   clip-path: polygon(0 0, 0 100%, 100% 100%, 100% 70%,
-             calc(12px * var(--indentation, 0)) 70%, calc(12px * var(--indentation, 0)) 0);
+             calc(12px * var(--indent, 0)) 70%, calc(12px * var(--indent, 0)) 0);
   -webkit-clip-path: polygon(0 0, 0 100%, 100% 100%, 100% 70%,
-             calc(12px * var(--indentation, 0)) 70%, calc(12px * var(--indentation, 0)) 0);
+             calc(12px * var(--indent, 0)) 70%, calc(12px * var(--indent, 0)) 0);
 }
 
-.starting-scope > .item:nth-child(3) {
+.half-indent > .item:nth-child(3) {
   margin-left: -12px;
 }
 
